@@ -306,7 +306,9 @@ slurm_sprint_node_table (node_info_t * node_ptr,
 	/****** Line ******/
 	if (node_ptr->os)
 		xstrfmtcat(out, "OS=%s ", node_ptr->os);
+	xstrcat(out, line_end);
 
+	/****** Line ******/
 	slurm_get_select_nodeinfo(node_ptr->select_nodeinfo,
 				  SELECT_NODEDATA_MEM_ALLOC,
 				  NODE_STATE_ALLOCATED,
@@ -321,7 +323,6 @@ slurm_sprint_node_table (node_info_t * node_ptr,
 
 	xstrfmtcat(out, "Sockets=%u Boards=%u",
 		   node_ptr->sockets, node_ptr->boards);
-
 	xstrcat(out, line_end);
 
 	/****** core & memory specialization Line (optional) ******/
